--- a/frontend/src/locales/lang/es.json
+++ b/frontend/src/locales/lang/es.json
@@ -26,6 +26,7 @@
     "home": "Dashboard",
     "personas": "Personas",
     "productos": "Productos",
+    "servicios": "Servicios",
     "presupuestos": "Presupuestos",
     "gestion": {
       "title": "Gestión Comercial",
