feat: Add Cliente, Interno, and Proveedor forms and views
- Implemented ClienteForm and ClienteNew components for creating new clients.
- Developed InternoForm and InternoNew components for registering internal users.
- Created ProveedorForm and ProveedorNew components for adding new providers.
- Introduced PersonaTypeSelector for selecting persona types during registration.
- Added routing and navigation for new persona types.
- Enhanced existing views to accommodate new functionalities and forms.

--- a/frontend/src/locales/lang/es.json
+++ b/frontend/src/locales/lang/es.json
@@ -31,7 +31,10 @@
     "gestion": {
       "title": "Gestión Comercial",
       "clientes": "Clientes",
+      "nuevoCliente": "Nuevo Cliente",
       "proveedores": "Proveedores",
+      "nuevoProveedor": "Nuevo Proveedor",
+      "nuevoInterno": "Nuevo Usuario Interno",
       "servicios": "Servicios"
     },
     "facturacion": {
