feat: add currency conversion and exchange rate management components
- Implemented ConversionForm for converting between currencies with validation.
- Created MonedaList to display available currencies in a table format.
- Developed TipoCambioForm for creating new exchange rates with validation.
- Added TipoCambioHistorial to view historical exchange rates with search functionality.
- Introduced schemas for validation using Zod for conversion and exchange rate forms.
- Enhanced types for better type safety and clarity in currency management.
- Integrated new components into the MonedaView for a cohesive user experience.

--- a/frontend/src/locales/lang/en.json
+++ b/frontend/src/locales/lang/en.json
@@ -15,7 +15,8 @@
             "title": "Billing",
             "facturas": "Invoices",
             "recibos": "Receipts",
-            "impuestos": "Taxes"
+            "impuestos": "Taxes",
+            "monedas": "Currencies"
         },
         "singleMenuItem": "Single menu item",
         "collapseMenu": {
