feat(gastos): implement gasto operativo management features
- Add GastoList component for displaying operational expenses.
- Create GastoNew component for adding new operational expenses.
- Implement service functions for CRUD operations on gastos operativos and asignaciones de gasto.
- Define types and schemas for gastos operativos and related entities.
- Add validation schemas using zod for form data.
- Create a centralized index for exporting gasto-related types and schemas.
- Implement UI components for handling user interactions with gastos operativos.
- Add confirmation dialog for deleting gastos operativos.

--- a/frontend/src/locales/lang/es.json
+++ b/frontend/src/locales/lang/es.json
@@ -43,6 +43,12 @@
       "recibos": "Recibos",
       "impuestos": "Impuestos",
       "monedas": "Monedas"
+    },
+    "finanzas": {
+      "title": "Finanzas y Costos",
+      "gastos": "Gastos Operativos",
+      "nuevoGasto": "Nuevo Gasto",
+      "rentabilidad": "Análisis de Rentabilidad"
     }
   }
 }
