feat: Add new views and components for price history management
- Implemented EstadisticasCambios component for displaying price change statistics.
- Created PreciosDesactualizados component to manage and display outdated prices.
- Developed HistorialPrecioList component for viewing price history of products and services.
- Added ActualizacionMasiva component for bulk price updates.
- Introduced schemas for validation of price updates and filters.
- Established types for price history management and related components.
- Integrated new components into the main HistorialPrecioView for cohesive navigation.

--- a/frontend/src/locales/lang/es.json
+++ b/frontend/src/locales/lang/es.json
@@ -48,7 +48,8 @@
       "title": "Finanzas y Costos",
       "gastos": "Gastos Operativos",
       "nuevoGasto": "Nuevo Gasto",
-      "rentabilidad": "Análisis de Rentabilidad"
+      "rentabilidad": "Análisis de Rentabilidad",
+      "historialPrecios": "Gestión de Precios"
     }
   }
 }
