feat: Add new Misionary logo and update layout components
- Introduced a new SVG logo for Misionary.
- Created a new HeaderBrand component to display the logo.
- Added HeaderPageTitle component to dynamically show the page title based on the current route.
- Enhanced ModernLayout with animations using framer-motion for smoother transitions.
- Updated UserDropdown to display user information from Redux store.
- Refactored SideNav to use the new MsnrLogo component.
- Modified Footer to simplify copyright information.
- Updated navigation configuration to reflect new catalog and commercial sections.
- Adjusted localization files to include new navigation keys and translations.

--- a/frontend/src/locales/lang/es.json
+++ b/frontend/src/locales/lang/es.json
@@ -28,28 +28,40 @@
     "productos": "Productos",
     "servicios": "Servicios",
     "presupuestos": "Presupuestos",
-    "gestion": {
+    "catalogos": {
+      "title": "Catálogos",
+      "productos": "Productos",
+      "servicios": "Servicios",
+      "precios": "Gestión de Precios"
+    },
+    "comercial": {
       "title": "Gestión Comercial",
       "clientes": "Clientes",
-      "nuevoCliente": "Nuevo Cliente",
       "proveedores": "Proveedores",
+      "presupuestos": "Presupuestos"
+    },
+    "operaciones": {
+      "title": "Operaciones Rápidas",
+      "nuevoCliente": "Nuevo Cliente",
       "nuevoProveedor": "Nuevo Proveedor",
-      "nuevoInterno": "Nuevo Usuario Interno",
-      "servicios": "Servicios"
+      "nuevoPresupuesto": "Nuevo Presupuesto",
+      "nuevoGasto": "Nuevo Gasto",
+      "nuevoUsuario": "Nuevo Usuario Interno"
     },
     "facturacion": {
       "title": "Facturación",
       "facturas": "Facturas",
-      "recibos": "Recibos",
-      "impuestos": "Impuestos",
-      "monedas": "Monedas"
+      "recibos": "Recibos"
     },
     "finanzas": {
-      "title": "Finanzas y Costos",
+      "title": "Finanzas y Control",
       "gastos": "Gastos Operativos",
-      "nuevoGasto": "Nuevo Gasto",
-      "rentabilidad": "Análisis de Rentabilidad",
-      "historialPrecios": "Gestión de Precios"
+      "rentabilidad": "Análisis de Rentabilidad"
+    },
+    "configuracion": {
+      "title": "Configuración",
+      "monedas": "Monedas",
+      "impuestos": "Impuestos"
     }
   }
 }
