feat: add Empresa management views and hooks
- Created EmpresaList component for displaying a list of empresas with search and filter functionality.
- Implemented EmpresaNew component for creating new empresas with form validation.
- Added EmpresaEdit component for editing existing empresas.
- Developed EmpresasView as a main view for managing empresas.
- Introduced useClientes and useEmpresas hooks for fetching and managing empresa data.
- Created empresaService for API interactions related to empresas.
- Defined schemas for creating and updating empresas using Zod for validation.
- Added types for empresa data structures and API responses.
- Implemented modal confirmation for deleting empresas.

--- a/frontend/src/locales/lang/es.json
+++ b/frontend/src/locales/lang/es.json
@@ -37,12 +37,14 @@
     "comercial": {
       "title": "Gestión Comercial",
       "clientes": "Clientes",
+      "empresas": "Empresas",
       "proveedores": "Proveedores",
       "presupuestos": "Presupuestos"
     },
     "operaciones": {
       "title": "Operaciones Rápidas",
       "nuevoCliente": "Nuevo Cliente",
+      "nuevoClienteConEmpresa": "Nuevo Cliente con Empresa",
       "nuevoProveedor": "Nuevo Proveedor",
       "nuevoPresupuesto": "Nuevo Presupuesto",
       "nuevoGasto": "Nuevo Gasto",
